@@ -23,6 +23,8 @@ anna (0.049) UNRELEASED; urgency=low
   * Joey Hess
     - convert to debhelper v4
     - use new debhelper udeb support
+  * Matt Kraai
+    - Install packages queued by anna-install.
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:27 +0100
 
